fix: 100vh on mobile including browser bar

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
 .App {
   width: 100vw;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
